--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
 				<li class="list-item"><a href="" class="list-item-link">關於永續</a></li>
 				<li class="list-item"><a href="" class="list-item-link">推薦給你</a></li>
 				<li class="list-item"><a href="" class="list-item-link">知道更多</a></li>
-				<li class="list-item"><a href="" class="list-item-link">聯絡我們</a></li>
+				<li class="list-item"><a href="https://jun0815419.github.io/WebDesign/final/1.html" class="list-item-link">聯絡我們</a></li>
 			</div>
 		</div>
 	</div>
@@ -42,8 +42,8 @@
 	</div>
 
 	<div class="btn">
-		<a href="" class="go-link"><div class="btn-left">產地大不同</div></a>
-		<a href="" class="go-link"><div class="btn-right">烘焙八階段</div></a>
+		<a href="https://jun0815419.github.io/WebDesign/final/index.html" class="go-link"><div class="btn-left">產地大不同</div></a>
+		<a href="https://an9lina.github.io/webdesign/Final/" class="go-link"><div class="btn-right">烘焙八階段</div></a>
 	</div>
 
 	<div class="map-area">
