--- a/final/index.html
+++ b/final/index.html
@@ -43,7 +43,7 @@
 
 	<div class="btn">
 		<a href="https://jun0815419.github.io/WebDesign/final/index.html" class="go-link"><div class="btn-left">產地大不同</div></a>
-		<a href="https://an9lina.github.io/webdesign/Final/" class="go-link"><div class="btn-right">烘焙八階段</div></a>
+		<a href="https://an9lina.github.io/webdesign/Final/index.html" class="go-link"><div class="btn-right">烘焙八階段</div></a>
 	</div>
 
 	<div class="map-area">
