--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
 				<li class="list-item"><a href="" class="list-item-link">關於永續</a></li>
 				<li class="list-item"><a href="" class="list-item-link">推薦給你</a></li>
 				<li class="list-item"><a href="" class="list-item-link">知道更多</a></li>
-				<li class="list-item"><a href="https://jun0815419.github.io/WebDesign/final/1.html" class="list-item-link">聯絡我們</a></li>
+				<li class="list-item"><a href="" class="list-item-link">聯絡我們</a></li>
 			</div>
 		</div>
 	</div>
