--- a/final/1.html
+++ b/final/1.html
@@ -22,14 +22,14 @@
 	
 	<div class="nav-bar">
 		<div class="nav-bar-left">
-			<a href=""><img src="img/logo.png"></a>
+			<a href="https://yuyan258.github.io/web-design/about%20us/index.html"><img src="img/logo.png"></a>
 		</div>
 		<div class="nav-bar-right">
 			<div class="list">
-				<li class="list-item"><a href="" class="list-item-link">關於永續</a></li>
-				<li class="list-item"><a href="" class="list-item-link">推薦給你</a></li>
-				<li class="list-item"><a href="" class="list-item-link">知道更多</a></li>
-				<li class="list-item"><a href="" class="list-item-link">聯絡我們</a></li>
+				<li class="list-item"><a href="https://yuyan258.github.io/web-design/about%20us/index.html" class="list-item-link">關於永續</a></li>
+				<li class="list-item"><a href="https://kaii0412.github.io/coffeemap/" class="list-item-link">推薦給你</a></li>
+				<li class="list-item"><a href="https://jun0815419.github.io/WebDesign/final/index.html" class="list-item-link">知道更多</a></li>
+				<li class="list-item"><a href="https://jun0815419.github.io/WebDesign/final/1.html" class="list-item-link">聯絡我們</a></li>
 			</div>
 		</div>
 	</div>
