--- a/final/index.html
+++ b/final/index.html
@@ -208,6 +208,6 @@
 	</div>
 
 
-	<div class="footer">&copy;2021, designed by callicoffe</div>
+	<div class="footer">&copy;2021, DESIGNED BY callicoffe</div>
 
 </body>
