--- a/final/1.html
+++ b/final/1.html
@@ -88,6 +88,6 @@
 
 
 
-	<div class="footer">&copy;2021, designed by callicoffe</div>
+	<div class="footer">&copy;2021, DESIGNED BY callicoffe</div>
 
 </body>
