--- a/final/index.html
+++ b/final/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 </head>
 
 
@@ -38,7 +39,7 @@
 
 	<div class="header">
 		<div class="line"></div>
-		<div class="title">知道更多</div>
+		<div class="title">知道更多-產地大不同</div>
 	</div>
 
 	<div class="btn">
@@ -50,24 +51,24 @@
 		<div class="map">
 			<img src="img/map.png">
 		</div>
+
+		<div class="bean-title">點擊即可查看該區咖啡豆資訊</div>
+
 		<div class="bean">
 			<div class="zm-bean">
-				<img src="img/bean.png">
+				<img src="img/bean.png">中美洲
 			</div>
 			<div class="nm-bean">
-				<img src="img/bean.png">
+				<img src="img/bean.png">南美洲
 			</div>
 			<div class="hd1-bean">
-				<img src="img/bean.png">
+				<img src="img/bean.png">海島地區
 			</div>
 			<div class="fz-bean">
-				<img src="img/bean.png">
+				<img src="img/bean.png">非洲、阿拉伯半島
 			</div>
 			<div class="yz-bean">
-				<img src="img/bean.png">
-			</div>
-			<div class="hd2-bean">
-				<img src="img/bean.png">
+				<img src="img/bean.png">亞洲、澳洲
 			</div>
 		</div>
 	</div>
@@ -204,7 +205,7 @@
 
 
 	<div class="icon">
-		<img src="img/icon.png">
+		<img src="img/icon.png" class="icon-btn">
 	</div>
 
 
