--- a/final/1.html
+++ b/final/1.html
@@ -4,20 +4,21 @@
   <meta charset="utf-8">
   <title>聯絡我們</title>
   <link rel="stylesheet" href="css/style1.css">
-  <script src="js/script.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 </head>
 
 
 <body>
 
 	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	<script src="js/script1.js"></script>
 
-	<div class="back">
-		<img src="img/back.png">
-	</div>
+<div id="main">
+
+
 
 	
 	<div class="nav-bar">
@@ -40,6 +41,10 @@
 	</div>
 
 
+
+
+
+	<div class="content">如果您和我們有相同的理念，想和我們交流，歡迎您聯絡我們！</div>
 
 
 <div class="container">
@@ -69,25 +74,29 @@
 	</div>
 
 
-	<div class="taiwan">
-		<img src="img/taiwan.png">
+
+</div>
+
+	<div class="icon">
+    	<img src="img/icon.png" class="icon-btn">
 	</div>
+
+
+	<div class="bottom">
+		<div class="footer">&copy;2021, DESIGNED BY callicoffe</div>
+	</div>
+
+
+
+
+
+
+
+
+
 </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-	<div class="footer">&copy;2021, DESIGNED BY callicoffe</div>
 
 </body>
